# mf-p2eft

./: .gitignore  README.md  pyproject.toml  setup.py
src/experiments/: layers_test.py
src/mf-p2eft/experiments/: layers_test.py  lora_import.py
src/mf-p2eft/models/: __init__.py  customlora.py  factory.py
src/mf-p2eft/models/minmaxplus/: abx.py  abxresnets.py  networks.py  resnets.py  utils.py
src/mf-p2eft/models/pam/: __init__.py  cuda_bindings.py
src/mf-p2eft/training/: loratraining.py
src/mf-p2eft/tuners/lora/: hrnbit.py  pamlora.py
src/mfp2eft/: __init__.py
src/mfp2eft/models/: __init__.py  factory.py
src/mfp2eft/models/minmaxplus/: __init__.py  abx.py  abxresnets.py  mixers.py  modules.py  networks.py  resnets.py  utils.py  weight_updates.py
src/mfp2eft/models/minmaxplus/kernels/: __init__.py  tropical.cu  tropical.py
src/mfp2eft/models/pam/: __init__.py  cuda_bindings.py  native.py  other_ops.ipynb  pam_experimental.py  pam_ops.py  pam_opt.py  paper_figures.ipynb  test_pam.py  utils.py
src/mfp2eft/tuners/lora/: hrnbit.py  pamlora.py
src/models/: customlora.py
src/utils/: lora.py
submodules/: loralayers.py
submodules/minmaxplus/: modules.py
